--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,13 +19,12 @@ services:
 
   worker:
     labels:
-      shipyard.before: 'sh -c "sleep 300 && poetry run flask db upgrade"'
+      shipyard.before: 'poetry run flask db upgrade'
     build: '.'
     environment:
       DATABASE_URL: 'postgres://obscure-user:obscure-password@postgres/app'
       DEV: ${DEV}
       FLASK_DEBUG: '1'
-    entrypoint: sh -c
     command: '/entrypoints/worker.sh'
     volumes:
       - './filesystem/entrypoints:/entrypoints:ro'
